feat: adapt algorithms with names starting with [a-d]

--- a/deepant/manifest.json
+++ b/deepant/manifest.json
@@ -2,8 +2,8 @@
   "title": "DeepAnT",
   "description": "Adapted community implementation (https://github.com/dev-aadarsh/DeepAnT)",
   "inputDimensionality": "multivariate",
-  "version": "0.1",
-  "authors": "",
+  "version": "0.3.0",
+  "authors": "Mohsin Munir and Shoaib Ahmed Siddiqui and Andreas Dengel and Sheraz Ahmed",
   "language": "Python",
   "type": "Detector",
   "learningType": "semi-supervised",
