--- a/baseline_increasing/Dockerfile
+++ b/baseline_increasing/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/baseline.py"
 
@@ -8,4 +9,5 @@ ENV ALGORITHM_MAIN="/app/baseline.py"
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
+COPY manifest.json /app/
 COPY baseline.py /app/
