--- a/deepant/Dockerfile
+++ b/deepant/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-torch:0.2.5
+FROM ghcr.io/timeeval/python3-torch:0.3.0
 
 LABEL maintainer="grit.fessel@student.hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -9,5 +10,6 @@ COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
 COPY deepant /app/deepant
-COPY algorithm.py /app/
 COPY helper.py /app/
+COPY manifest.json /app/
+COPY algorithm.py /app/
