feat: adapt algorithms with names starting with [e-i]

--- a/eif/Dockerfile
+++ b/eif/Dockerfile
@@ -1,6 +1,6 @@
 # Separate build image!
 #----------------------------
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5 as build
+FROM ghcr.io/timeeval/python3-base:0.3.0 as build
 
 # install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends build-essential;
@@ -15,16 +15,18 @@ RUN pip install -r ./requirements.txt
 #----------------------------
 
 # inherit from the python3-base base image
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5 as runtime
+FROM ghcr.io/timeeval/python3-base:0.3.0 as runtime
 
 LABEL maintainer="rohan.sawahn@student.hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 # specify the main entrypoint to your algorithm code
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
+ENV PATH="/opt/venv/bin:$PATH"
+
 COPY --from=build /opt/venv /opt/venv
 
 # add the algorithm code (in this case only a single file)
-COPY algorithm.py .
-
-ENV PATH="/opt/venv/bin:$PATH"
+COPY algorithm.py /app/
+COPY manifest.json /app/
