--- a/grammarviz3_multi/Dockerfile
+++ b/grammarviz3_multi/Dockerfile
@@ -1,14 +1,16 @@
-FROM gitlab.hpi.de/akita/dependency_proxy/containers/maven:3-openjdk-11-slim as build
+FROM maven:3-openjdk-11-slim as build
 
 COPY pom.xml /app/
 COPY src /app/src
 RUN cd /app && \
     mvn package -PsingleCLI -DskipTests
 
-FROM registry.gitlab.hpi.de/akita/i/java-base:0.2.5
+FROM ghcr.io/timeeval/java-base:0.3.0
 
 LABEL maintainer="yannik.schroeder@student.hpi.uni-potsdam.de;niklas.koehnecke@student.hpi.uni-potsdam.de"
+LABEL org.opencontainers.image.licenses="GPL-2.0"
 
 ENV ALGORITHM_MAIN="/app/algorithm.jar"
 
+COPY manifest.json /app/
 COPY --from=build /app/target/grammarviz2-0.0.1-SNAPSHOT-jar-with-dependencies.jar ${ALGORITHM_MAIN}
