--- a/hotsax/Dockerfile
+++ b/hotsax/Dockerfile
@@ -1,12 +1,13 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses="GPL-2.0"
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
-COPY requirements.txt .
+COPY requirements.txt /app/
 RUN set -eux; \
-    pip install --no-cache-dir -r requirements.txt; \
+    pip install --no-cache-dir -r /app/requirements.txt; \
     find /usr/local -depth \
 		\( \
 			\( -type d -a \( -name test -o -name tests -o -name idle_test \) \) \
@@ -15,5 +16,6 @@ RUN set -eux; \
 		\) -exec rm -rf '{}' +; \
     rm -rf /tmp/* /var/tmp/* ~/.cache/pip
 
-COPY saxpy ./saxpy
-COPY algorithm.py .
+COPY saxpy /app/saxpy/
+COPY manifest.json /app/
+COPY algorithm.py /app/
