--- a/ensemble_gi/Dockerfile
+++ b/ensemble_gi/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -8,4 +9,5 @@ COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 
 COPY ensemble_gi /app/ensemble_gi
+COPY manifest.json /app/
 COPY algorithm.py /app/
