--- a/generic_xgb/Dockerfile
+++ b/generic_xgb/Dockerfile
@@ -1,12 +1,13 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
-COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+COPY ./requirements.txt /app/
+RUN pip install -r /app/requirements.txt
 
-COPY ./algorithm.py .
-COPY ./model.py .
-COPY ./manifest.json .
+COPY ./algorithm.py /app/
+COPY ./model.py /app/
+COPY ./manifest.json /app/
