--- a/grammarviz3/Dockerfile
+++ b/grammarviz3/Dockerfile
@@ -1,4 +1,4 @@
-FROM gitlab.hpi.de/akita/dependency_proxy/containers/maven:3-openjdk-11-slim as build
+FROM maven:3-openjdk-11-slim as build
 
 WORKDIR /app
 
@@ -7,10 +7,12 @@ COPY src src
 RUN mvn package -PsingleCLI -DskipTests
 
 
-FROM registry.gitlab.hpi.de/akita/i/java-base:0.2.5
+FROM ghcr.io/timeeval/java-base:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses="GPL-2.0"
 
 ENV ALGORITHM_MAIN="/app/algorithm.jar"
 
+COPY manifest.json /app/
 COPY --from=build /app/target/grammarviz2-0.0.1-SNAPSHOT-jar-with-dependencies.jar ${ALGORITHM_MAIN}
