--- a/health_esn/Dockerfile
+++ b/health_esn/Dockerfile
@@ -1,11 +1,13 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+COPY requirements.txt /app/
+RUN pip install -r /app/requirements.txt
 
-COPY health_esn ./health_esn
-COPY algorithm.py .
+COPY health_esn /app/health_esn/
+COPY manifest.json /app/
+COPY algorithm.py /app/
