--- a/hif/Dockerfile
+++ b/hif/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="yannik.schroeder@student.hpi.de"
+LABEL org.opencontainers.image.licenses="GPL-2.0"
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -8,5 +9,6 @@ ENV ALGORITHM_MAIN="/app/algorithm.py"
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
+COPY manifest.json /app/
 COPY hif.py /app/
 COPY algorithm.py /app/
