--- a/if_lof/Dockerfile
+++ b/if_lof/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="rohan.sawahn@student.hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -8,3 +9,4 @@ COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 
 COPY algorithm.py /app/
+COPY manifest.json /app/
