fix(dbstream,pst): increase download timeout for CRAN packages

--- a/dbstream/Dockerfile
+++ b/dbstream/Dockerfile
@@ -5,8 +5,8 @@ LABEL org.opencontainers.image.licenses=MIT
 
 # install stream and other libraries and cleanup afterwards
 RUN set -eux; \
-    R -e 'install_version("BBmisc", version="1.12"); library("BBmisc")';\
-    R -e 'install_version("stream", version="1.5.1"); library("stream")';\
+    R -e 'options(timeout=600); install_version("BBmisc", version="1.12"); library("BBmisc")';\
+    R -e 'options(timeout=600); install_version("stream", version="1.5.1"); library("stream")';\
     find /opt/R/${R_VERSION}/lib/R/library -depth \
       \( \
         -type d -a \( -name doc -o -name html \) \
