feat: adapt algorithms with names starting with [j-n]

--- a/median_method/Dockerfile
+++ b/median_method/Dockerfile
@@ -1,28 +1,13 @@
-# Separate build image!
-#----------------------------
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5 as build
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="yannik.schroeder@student.hpi.de"
-
-# install build dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends build-essential
-
-RUN python -m venv --system-site-packages /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
-
-# build and install dependencies
-RUN pip install cython
-COPY requirements.txt .
-RUN pip install -r ./requirements.txt
-#----------------------------
-
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5 as runtime
-
-LABEL maintainer="yannik.schroeder@student.hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
-ENV PATH="/opt/venv/bin:$PATH"
 
-COPY --from=build /opt/venv /opt/venv
+COPY requirements.txt /app/
+RUN pip install -r /app/requirements.txt
+
 COPY median_method.py /app/
+COPY manifest.json /app/
 COPY algorithm.py /app/
