--- a/laser_dbn/Dockerfile
+++ b/laser_dbn/Dockerfile
@@ -1,11 +1,13 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
 COPY requirements.txt /app/
-COPY algorithm.py /app/
-COPY laser_dbn /app/laser_dbn
-
 RUN pip install -r /app/requirements.txt
+
+COPY manifest.json /app/
+COPY laser_dbn /app/laser_dbn
+COPY algorithm.py /app/
