--- a/lstm_vae/Dockerfile
+++ b/lstm_vae/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-torch:0.2.5
+FROM ghcr.io/timeeval/python3-torch:0.3.0
 
 LABEL maintainer="siddeshkanth.logonathan@student.hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -8,4 +9,5 @@ COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt;
 
 COPY src /app/src
+COPY manifest.json /app/
 COPY algorithm.py /app/
