--- a/multi_hmm/Dockerfile
+++ b/multi_hmm/Dockerfile
@@ -1,11 +1,13 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
-COPY algorithm.py /app/
 COPY multi_hmm /app/multi_hmm
+COPY manifest.json /app/
+COPY algorithm.py /app/
