--- a/normalizing_flows/Dockerfile
+++ b/normalizing_flows/Dockerfile
@@ -1,10 +1,11 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-torch:0.2.5
+FROM ghcr.io/timeeval/python3-torch:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
-COPY . /app
+COPY . /app/
