--- a/telemanom/Dockerfile
+++ b/telemanom/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+# custom license has no abbreviation
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -8,4 +9,6 @@ COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
 COPY telemanom /app/telemanom
+COPY LICENSE /app/
+COPY manifest.json /app/
 COPY algorithm.py /app/
