--- a/omnianomaly/Dockerfile
+++ b/omnianomaly/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python36-base:0.2.5
+FROM ghcr.io/timeeval/python36-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -12,4 +13,5 @@ COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
 COPY omni_anomaly /app/omni_anomaly
+COPY manifest.json /app/
 COPY algorithm.py /app/
