--- a/pcc/Dockerfile
+++ b/pcc/Dockerfile
@@ -1,12 +1,12 @@
-FROM registry.gitlab.hpi.de/akita/i/pyod:0.2.5
+FROM ghcr.io/timeeval/pyod:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
-
 # install algorithm dependencies
-COPY requirements.txt .
-RUN pip install -r ./requirements.txt
+COPY requirements.txt /app/
+RUN pip install -r /app/requirements.txt
 
-COPY algorithm.py .
+COPY algorithm.py /app/
