--- a/phasespace_svm/Dockerfile
+++ b/phasespace_svm/Dockerfile
@@ -1,12 +1,14 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
 # install algorithm dependencies
-COPY requirements.txt ./
-RUN pip install -r ./requirements.txt
+COPY requirements.txt /app/
+RUN pip install -r /app/requirements.txt
 
-COPY phasespace.py .
-COPY algorithm.py .
+COPY phasespace.py /app/
+COPY manifest.json /app/
+COPY algorithm.py /app/
