--- a/s_h_esd/Dockerfile
+++ b/s_h_esd/Dockerfile
@@ -1,10 +1,11 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="yannik.schroeder@student.hpi.de"
+LABEL org.opencontainers.image.licenses="GPL-3.0"
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+COPY requirements.txt /app/
+RUN pip install -r /app/requirements.txt
 
 COPY . /app/
