--- a/torsk/Dockerfile
+++ b/torsk/Dockerfile
@@ -1,11 +1,13 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
-COPY torsk ./torsk
-COPY setup.py ./setup.py
-RUN pip install .
+COPY torsk /app/torsk
+COPY setup.py /app/setup.py
+RUN pip install /app
 
-COPY algorithm.py .
+COPY manifest.json /app/
+COPY algorithm.py /app/
