fix(pcc): include manifest in Docker image

--- a/pcc/Dockerfile
+++ b/pcc/Dockerfile
@@ -9,4 +9,5 @@ ENV ALGORITHM_MAIN="/app/algorithm.py"
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
+COPY manifest.json /app/
 COPY algorithm.py /app/
