--- a/series2graph/Dockerfile
+++ b/series2graph/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
 
