Add HST streaming isolation forest approach

--- a/hst/Dockerfile
+++ b/hst/Dockerfile
@@ -5,9 +5,10 @@ LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
+# install algorithm dependencies
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
-COPY median_method.py /app/
 COPY manifest.json /app/
+COPY hst.py /app/
 COPY algorithm.py /app/
